crates/neenee-cli/src/tui/snapshots/neenee__tui__snapshot_tests__edit_file_prose_diff_suppresses_noisy_word_highlights.snap
---
source: crates/neenee-cli/src/tui/snapshot_tests.rs
assertion_line: 379
expression: "render_grid(&m, 100, 30)"
---
- Edit docs/explanation/tui.md +1 -1
         @@ -1 +1 @@
   1   - Because the frame is a pure function of state, anything that changes state — a streamed tok
         en, a permission request, a mouse drag — shows up on the very next frame with no manual inv
         alidation.
      1+ Because the frame is a pure function of state, diff compares the back grid against the fron
         t grid and walks only the dirty rows from each row's dirty column.

backgrounds:
A=#070808  B=#111312  C=#201414  D=#121F16  .=reset
0: A100
1: B100
2: C100
3: C100
4: C100
5: D100
6: D100
