crates/neenee-cli/src/tui/snapshots/neenee__tui__snapshot_tests__expanded_body_flush_to_header_neighbours_stay_flush.snap
---
source: crates/neenee-cli/src/tui/snapshot_tests.rs
expression: "render_transcript_grid(&steps, 60, 16)"
---

  + Read a.rs · 0ms
  - Grep "foo" in src · 0ms
    src/a.rs
    10  1:foo
    src/b.rs
     5  1:foo

  + Read c.rs · 0ms
